# alpp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
alpp/: __init__.py  chart_picker.py  charts.py  cli.py  creds.py  data.py  history.py  ind_picker.py  indicators.py  render.py  symbols.py  tf_picker.py  timeframes.py
scripts/: install-homebrew.sh
tests/: test_creds.py
