[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpp"
version = "0.3.1"
description = "Alpaca chart CLI with Rich UI and HTML export"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.40",
    "pandas>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "keyring>=25.0",
]

[project.scripts]
alpp = "alpp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alpp*"]